# game3d_engine

./: Cargo.toml  build.rs
content/: dustbin.mtl  wall.mtl
src/: audio.rs  camera.rs  camera_control.rs  collision.rs  geom.rs  lib.rs  model.rs  music.rs  physics.rs  render.rs  shader.vert  shader_2d.frag  shader_2d.frag.spv  shader_2d.vert  shader_2d.vert.spv  shapes.rs  text.rs  texture.rs
